--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -1,10 +1,8 @@
 name: 'Build and Deploy to Cloud Run'
-
 on:
   push:
     branches:
-      - '"main"'
-
+      - main
 env:
   PROJECT_ID: 'mlb-quick-recap'
   GAR_NAME: 'mlb-quick-recap'
@@ -12,42 +10,35 @@ env:
   REGION: 'us-central1'
   SERVICE: 'mld-quick-recap-frontend'
   WORKLOAD_IDENTITY_PROVIDER: 'projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
-
 jobs:
   deploy:
     runs-on: 'ubuntu-latest'
-
     permissions:
       contents: 'read'
       id-token: 'write'
-
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@v4'
-
       - name: 'Authenticate to Google Cloud'
         id: 'auth'
         uses: 'google-github-actions/auth@v2'
         with:
           credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
-
-
       - name: 'Docker Auth'
-        run: |-
+        run: |
           gcloud auth configure-docker '${{ env.REGION }}-docker.pkg.dev'
-
       - name: 'Build and Push Container'
-        run: |-
+        run: |
           DOCKER_TAG="${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_NAME }}/${{ env.SERVICE }}:${{ github.sha }}"
           docker build --tag "${DOCKER_TAG}" .
           docker push "${DOCKER_TAG}"
       - name: 'Deploy to Cloud Run'
-        uses: 'google-github-actions/deploy-cloudrun@33553064113a37d688aa6937bacbdc481580be17' # google-github-actions/deploy-cloudrun@v2
+        id: 'deploy'
+        uses: 'google-github-actions/deploy-cloudrun@v2'
         with:
           service: '${{ env.SERVICE }}'
           region: '${{ env.REGION }}'
           image: '${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_NAME }}/${{ env.SERVICE }}:${{ github.sha }}'
       - name: 'Show output'
-        run: |2-
-
+        run: |
           echo ${{ steps.deploy.outputs.url }}
