--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,19 @@
 server {
-    listen 80;
+    listen 8080;  # Listen on Cloud Run's required port
+    server_name localhost;
+
+    location / {
+        proxy_pass http://localhost:80;  # Forward to internal server
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+}
+
+server {
+    listen 80;  # Internal server
     server_name localhost;
     root /usr/share/nginx/html;
     index index.html;
